[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Skill/bat.png" type="Texture" id=1]
[ext_resource path="res://Player/Skill/TrailOfBat.gd" type="Script" id=2]
[ext_resource path="res://Player/Skill/Bat.gd" type="Script" id=3]
[ext_resource path="res://Boxes/HitBox.tscn" type="PackedScene" id=4]

[sub_resource type="Curve" id=1]
min_value = 0.99
_data = [ Vector2( 0, 0.99 ), 0.0, 0.00142035, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Animation" id=2]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TrailPosition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -2 ), Vector2( 0, 2 ), Vector2( 0, -2 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 1 )

[node name="Bat" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="TrailPosition" type="Position2D" parent="."]
position = Vector2( 0, -2 )

[node name="Line2D" type="Line2D" parent="TrailPosition"]
show_behind_parent = true
position = Vector2( -6, 5 )
width = 0.5
width_curve = SubResource( 1 )
default_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )
lenght = 5

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1 )
texture = ExtResource( 1 )
hframes = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Animate"
anims/Animate = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HitBox" parent="." instance=ExtResource( 4 )]
collision_layer = 16

[node name="Col1" parent="HitBox" index="0"]
shape = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]

[editable path="HitBox"]
